log
Fri 17 May 2024 07:53:02 PM UTC: 
 tests:  0|5
total_score: 0/70
ccc59f4
Fri 17 May 2024 08:19:10 PM UTC: 
 sudoku.c | 42 +++++++++++++++++++++++++++++++++++++++++-
 1 file changed, 41 insertions(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
446938e
Fri 17 May 2024 08:36:18 PM UTC: 
 sudoku.c | 19 +++++++++++++++++++
 1 file changed, 19 insertions(+)
 tests:  3|4
total_score: 20/70
b6d8f53
Fri 17 May 2024 08:41:06 PM UTC: 
 sudoku.c | 19 ++++++++++---------
 1 file changed, 10 insertions(+), 9 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:94:10: error: unused variable ‘j’ [-Werror=unused-variable]
   94 |    int i,j;
      |          ^
sudoku.c:94:8: error: unused variable ‘i’ [-Werror=unused-variable]
   94 |    int i,j;
      |        ^
cc1: all warnings being treated as errors
Compilation failed
4970da6
Fri 17 May 2024 08:41:26 PM UTC: 
 sudoku.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  5|3
total_score: 35/70
ddcfd78
Fri 17 May 2024 08:45:54 PM UTC: 
 sudoku.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  6|2
total_score: 45/70
c075d1b
Fri 17 May 2024 09:03:05 PM UTC: 
 sudoku.c | 19 +++++++++++++++++++
 1 file changed, 19 insertions(+)
 tests:  9|1
total_score: 60/70
fd7b565
Sat 18 May 2024 08:03:00 PM UTC: 
 sudoku.c | 13 ++++++-------
 1 file changed, 6 insertions(+), 7 deletions(-)
 tests:  9|1
total_score: 60/70
6a4ded5
Sat 18 May 2024 08:54:15 PM UTC: 
 sudoku.c | 41 +++++++++++++++++------------------------
 1 file changed, 17 insertions(+), 24 deletions(-)
 tests:  8|1
total_score: 60/70
f4bc39d
Sat 18 May 2024 08:56:07 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|1
total_score: 60/70
7c8544a
Sat 18 May 2024 08:56:35 PM UTC: 
 sudoku.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  8|1
total_score: 60/70
0ba3f2e
Sat 18 May 2024 09:00:58 PM UTC: 
 sudoku.c | 16 +++++++---------
 1 file changed, 7 insertions(+), 9 deletions(-)
 tests:  8|1
total_score: 60/70
63f5f1e
Sat 18 May 2024 09:01:17 PM UTC: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  8|1
total_score: 60/70
30c2d5b
Sat 18 May 2024 09:10:41 PM UTC: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  8|1
total_score: 60/70
d608066
Sat 18 May 2024 09:14:28 PM UTC: 
 sudoku.c | 22 ++++++++++------------
 1 file changed, 10 insertions(+), 12 deletions(-)
 tests:  10|0
total_score: 70/70
1f01344
Sat 18 May 2024 09:14:57 PM UTC: 
 sudoku.c | 22 ++++++++++++----------
 1 file changed, 12 insertions(+), 10 deletions(-)
 tests:  8|1
total_score: 60/70
5d3164e
Sat 18 May 2024 09:27:50 PM UTC: 
 sudoku.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  8|1
total_score: 60/70
a20154e
Sat 18 May 2024 09:28:45 PM UTC: 
 sudoku.c | 18 +++++++++---------
 1 file changed, 9 insertions(+), 9 deletions(-)
 tests:  8|1
total_score: 60/70
51744d0
Sat 18 May 2024 09:29:05 PM UTC: 
 sudoku.c | 18 +++++++++---------
 1 file changed, 9 insertions(+), 9 deletions(-)
 tests:  8|1
total_score: 60/70
b8b2087
Sat 18 May 2024 09:34:33 PM UTC: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  10|0
total_score: 70/70
14101fc
